cluster/apps/default/litellm/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: litellm
  annotations:
    external-dns.alpha.kubernetes.io/controller: internal
spec:
  parentRefs:
    - name: envoy-internal
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - litellm.<secret:private-domain>
  rules:
    - backendRefs:
        - name: litellm-litellm-helm
          port: 4000
